--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css"
     />
-    <link href="./output.css" rel="stylesheet" />
-    <link href="./style.css" rel="stylesheet" />
+    <link href="./css/output.css" rel="stylesheet" />
+    <link href="./css/style.css" rel="stylesheet" />
     <link rel="icon" href="assets/favicon.svg" type="image/svg+xml" />
 
     <title>Грузовые линии</title>
@@ -26,16 +26,22 @@
           class="mr-6 max-[768px]:w-25 max-[768px]:h-7"
         />
         <div class="flex gap-6 max-[1440px]:hidden">
-          <a href="./cargo_transportation.html" class="flex items-center gap-1">
+          <a
+            href="/pages/cargo_transportation.html"
+            class="flex items-center gap-1"
+          >
             <p class="text-white font-medium text-xl">Грузоперевозки</p>
             <img src="./assets/icons/chevron.svg" alt="chevron" />
           </a>
-          <a href="./road_transportation.html" class="flex items-center gap-1">
+          <a
+            href="/pages/road_transportation.html"
+            class="flex items-center gap-1"
+          >
             <p class="header_title">Автоперевозки</p>
             <img src="./assets/icons/chevron.svg" alt="chevron" />
           </a>
           <p class="header_title">Расчет стоимости</p>
-          <a href="./pricelist.html" class="header_title">Прайс-лист</a>
+          <a href="/pages/pricelist.html" class="header_title">Прайс-лист</a>
         </div>
       </div>
       <div class="gap-2 flex">
@@ -84,7 +90,7 @@
         </div>
         <div class="px-5">
           <a
-            href="./cargo_transportation.html"
+            href="/pages/cargo_transportation.html"
             class="flex items-center gap-1 justify-between mb-8"
           >
             <p
@@ -95,11 +101,11 @@
             <img src="./assets/icons/chevron.svg" alt="chevron" class="mt-1" />
           </a>
           <a
-            href="./road_transportation.html"
+            href="/pages/road_transportation.html"
             class="flex items-center gap-1 justify-between mb-8"
           >
             <p
-              href="./road_transportation.html"
+              href="/pages/road_transportation.html"
               class="text-white font-medium text-5xl leading-[100%] max-[768px]:text-[1.75rem]"
             >
               Автоперевозки
@@ -112,7 +118,7 @@
             Расчет стоимости
           </p>
           <a
-            href="/pricelist.html"
+            href="/pages/pricelist.html"
             class="text-white font-medium text-5xl leading-[100%] max-[768px]:text-[1.75rem] mb-8"
           >
             Прайс-лист
@@ -345,7 +351,7 @@
             себя весь спектр ваших транспортныз задач
           </p>
           <a
-            href="/about.html"
+            href="/pages/about.html"
             class="w-[18rem] mb-7 max-[768px]:mb-6 h-16 max-[768px]:w-full max-[1440px]:text-base! max-[768px]:text-base! max-[1440px]:h-13 max-[1440px]:w-59.5 rounded-xl flex items-center justify-center gap-2.5 bg-[#C83A36] text-xl text-white"
           >
             Подробнее о компании
@@ -369,7 +375,7 @@
 
         <div class="flex flex-wrap gap-3">
           <a
-            href="/road_transportation.html#europ"
+            href="/pages/road_transportation.html#europ"
             class="service-card flex-1 basis-[calc(33.333%-0.5rem)] max-[1024px]:basis-[calc(50%-0.375rem)] min-w-[300px] p-8 bg-white h-125 max-[1440px]:h-80 max-[768px]:h-60 radius_left relative overflow-hidden flex justify-between"
           >
             <p
@@ -396,7 +402,7 @@
           </a>
 
           <a
-            href="/road_transportation.html#city"
+            href="/pages/road_transportation.html#city"
             class="service-card flex-1 basis-[calc(33.333%-0.5rem)] max-[1024px]:basis-[calc(50%-0.375rem)] min-w-[300px] p-8 bg-white h-125 max-[768px]:h-60 max-[1440px]:h-80 overflow-hidden radius_full radius_servie2 relative flex justify-between"
           >
             <p
@@ -417,7 +423,7 @@
           </a>
 
           <a
-            href="/cargo_transportation.html#rc"
+            href="/pages/cargo_transportation.html#rc"
             class="service-card flex-1 basis-[calc(33.333%-0.5rem)] max-[1024px]:basis-[calc(50%-0.375rem)] min-w-[300px] p-8 bg-white radius_right max-[768px]:h-60 radius_servie3 h-125 max-[1440px]:h-80 overflow-hidden relative flex justify-between"
           >
             <p
@@ -438,7 +444,7 @@
           </a>
 
           <a
-            href="/cargo_transportation.html#ltl"
+            href="/pages/cargo_transportation.html#ltl"
             class="service-card flex-1 basis-[calc(50%-0.375rem)] max-[1024px]:basis-[calc(50%-0.375rem)] min-w-[300px] p-8 bg-white radius_left max-[768px]:h-60 radius_servie2 overflow-hidden h-125 max-[1440px]:h-80 relative flex justify-between"
           >
             <p
@@ -459,7 +465,7 @@
           </a>
 
           <a
-            href="/road_transportation.html#partial"
+            href="/pages/road_transportation.html#partial"
             class="service-card flex-1 basis-[calc(50%-0.375rem)] max-[1024px]:basis-full min-w-[300px] p-8 bg-white h-125 max-[768px]:h-60 max-[1440px]:h-80 radius_right radius_servie5 relative flex justify-between"
           >
             <p
@@ -805,7 +811,7 @@
         <div class="flex items-center justify-between mb-14 max-[768px]:mb-6">
           <h2 class="title">Отзывы</h2>
           <a
-            href="/reviews.html"
+            href="/pages/reviews.html"
             class="w-44.5 max-[768px]:hidden h-16 max-[1440px]:h-13 max-[1440px]:w-37 max-[1440px]:text-base! rounded-xl flex items-center justify-center gap-2.5 bg-[#C83A36] text-xl text-white"
           >
             Все отзывы
@@ -1324,7 +1330,7 @@
           class="flex items-center justify-between mb-14 max-[1440px]:mb-10 max-[768px]:flex-col max-[768px]:gap-6 max-[768px]:items-start"
         >
           <h2 class="title">Новости компании</h2>
-          <a href="/news.html">
+          <a href="/pages/news.html">
             <button
               class="h-16 w-46.5 max-[768px]:flex max-[768px]:h-13 max-[768px]:text-base! max-[1024px]:hidden max-[1440px]:h-16 rounded-xl flex items-center justify-center gap-2.5 bg-[#C83A36] text-xl! text-white"
             >
@@ -1339,7 +1345,7 @@
         </div>
         <div class="flex gap-6 max-[1440px]:overflow-auto">
           <a
-            href="/blog.html"
+            href="/pages/blog.html"
             class="news-card max-[1440px]:w-108 min-[1440px]:flex-1 shrink-0 max-[768px]:w-72 max-[768px]:rounded-3xl"
           >
             <img src="./assets/images/news1.png" class="news-card-image mb-4" />
@@ -1371,7 +1377,7 @@
           </a>
 
           <a
-            href="/blog.html"
+            href="/pages/blog.html"
             class="news-card max-[1440px]:w-108 min-[1440px]:flex-1 shrink-0 max-[768px]:w-72 max-[768px]:rounded-3xl"
           >
             <img src="./assets/images/news3.png" class="news-card-image mb-4" />
@@ -1388,7 +1394,7 @@
           </a>
 
           <a
-            href="/blog.html"
+            href="/pages/blog.html"
             class="news-card max-[1440px]:w-108 min-[1440px]:flex-1 shrink-0 max-[768px]:w-72 max-[768px]:rounded-3xl"
           >
             <img src="./assets/images/news4.png" class="news-card-image mb-4" />
@@ -1406,7 +1412,7 @@
         </div>
 
         <a
-          href="./news.html"
+          href="/pages/news.html"
           class="w-full h-16 rounded-xl max-[768px]:hidden mt-10 hidden max-[1024px]:flex items-center justify-center gap-2.5 bg-[#C83A36] text-xl! text-white"
         >
           Все новости
@@ -1452,7 +1458,7 @@
         <div class="flex flex-col justify-between">
           <div>
             <a
-              href="/cargo_transportation.html"
+              href="/pages/cargo_transportation.html"
               class="text-[#ffffff99] hover:text-white transition-colors"
             >
               <p
@@ -1464,42 +1470,42 @@
             <ul>
               <li class="text-white space3 font-medium mb-3">
                 <a
-                  href="/cargo_transportation.html"
+                  href="/pages/cargo_transportation.html"
                   class="text-white hover:text-[#C83A36] transition-colors"
                   >Грузоперевозки фурами</a
                 >
               </li>
               <li class="text-white space3 font-medium mb-3">
                 <a
-                  href="/cargo_transportation.html"
+                  href="/pages/cargo_transportation.html"
                   class="text-white hover:text-[#C83A36] transition-colors"
                   >Грузоперевозки 1,5 тонны</a
                 >
               </li>
               <li class="text-white space3 font-medium mb-3">
                 <a
-                  href="/cargo_transportation.html"
+                  href="/pages/cargo_transportation.html"
                   class="text-white hover:text-[#C83A36] transition-colors"
                   >Грузоперевозки 3 тонны</a
                 >
               </li>
               <li class="text-white space3 font-medium mb-3">
                 <a
-                  href="/cargo_transportation.html"
+                  href="/pages/cargo_transportation.html"
                   class="text-white hover:text-[#C83A36] transition-colors"
                   >Грузоперевозки 5 тонны</a
                 >
               </li>
               <li class="text-white space3 font-medium mb-3">
                 <a
-                  href="/cargo_transportation.html"
+                  href="/pages/cargo_transportation.html"
                   class="text-white hover:text-[#C83A36] transition-colors"
                   >Грузоперевозки 10 тонны</a
                 >
               </li>
               <li class="text-white space3 font-medium mb-3">
                 <a
-                  href="/cargo_transportation.html"
+                  href="/pages/cargo_transportation.html"
                   class="text-white hover:text-[#C83A36] transition-colors"
                   >Грузоперевозки 20 тонны</a
                 >
@@ -1514,7 +1520,7 @@
         </div>
         <div>
           <a
-            href="/road_transportation.html"
+            href="/pages/road_transportation.html"
             class="text-[#ffffff99] hover:text-white transition-colors"
           >
             <p
@@ -1526,21 +1532,21 @@
           <ul>
             <li class="text-white space3 font-medium mb-3">
               <a
-                href="/road_transportation.html"
+                href="/pages/road_transportation.html"
                 class="text-white hover:text-[#C83A36] transition-colors"
                 >Международные перевозки</a
               >
             </li>
             <li class="text-white space3 font-medium mb-3">
               <a
-                href="/road_transportation.html"
+                href="/pages/road_transportation.html"
                 class="text-white hover:text-[#C83A36] transition-colors"
                 >Междугородние перевозки</a
               >
             </li>
             <li class="text-white space3 font-medium mb-3">
               <a
-                href="/road_transportation.html"
+                href="/pages/road_transportation.html"
                 class="text-white hover:text-[#C83A36] transition-colors"
                 >Перевозка негабаритных грузов</a
               >
@@ -1561,42 +1567,42 @@
           <ul>
             <li class="text-white space3 font-medium mb-3">
               <a
-                href="/pricelist.html"
+                href="/pages/pricelist.html"
                 class="text-white hover:text-[#C83A36] transition-colors"
                 >Прайс-лист</a
               >
             </li>
             <li class="text-white space3 font-medium mb-3">
               <a
-                href="/news.html"
+                href="/pages/news.html"
                 class="text-white hover:text-[#C83A36] transition-colors"
                 >Новости</a
               >
             </li>
             <li class="text-white space3 font-medium mb-3">
               <a
-                href="/blog.html"
+                href="/pages/blog.html"
                 class="text-white hover:text-[#C83A36] transition-colors"
                 >Статьи</a
               >
             </li>
             <li class="text-white space3 font-medium mb-3">
               <a
-                href="/documents.html"
+                href="/pages/documents.html"
                 class="text-white hover:text-[#C83A36] transition-colors"
                 >Документы</a
               >
             </li>
             <li class="text-white space3 font-medium mb-3">
               <a
-                href="/reviews.html"
+                href="/pages/reviews.html"
                 class="text-white hover:text-[#C83A36] transition-colors"
                 >Отзывы</a
               >
             </li>
             <li class="text-white space3 font-medium mb-3">
               <a
-                href="/contacts.html"
+                href="/pages/contacts.html"
                 class="text-white hover:text-[#C83A36] transition-colors"
                 >Контакты</a
               >
@@ -1606,7 +1612,7 @@
         <div class="flex flex-col justify-between max-[1024px]:hidden">
           <div class="mb-20">
             <a
-              href="/contacts.html"
+              href="/pages/contacts.html"
               class="text-[#ffffff99] hover:text-white transition-colors"
             >
               <p
@@ -1619,8 +1625,12 @@
               <li
                 class="text-white space3 font-medium mb-3 max-w-108 max-[1440px]:max-w-60"
               >
-              <a href="https://yandex.uz/maps/65/novosibirsk/house/stantsionnaya_ulitsa_62_1/bEsYfgVmTU0DQFtufXV4dnpnZQ==/?ll=82.826483%2C54.997641&z=16" class="text-white hover:text-[#C83A36] transition-colors">ООО АТЭК «Грузовые линии» 630071, Новосибирск, ул. Станционная,
-                62/1, офис 416</a>
+                <a
+                  href="https://yandex.uz/maps/65/novosibirsk/house/stantsionnaya_ulitsa_62_1/bEsYfgVmTU0DQFtufXV4dnpnZQ==/?ll=82.826483%2C54.997641&z=16"
+                  class="text-white hover:text-[#C83A36] transition-colors"
+                  >ООО АТЭК «Грузовые линии» 630071, Новосибирск, ул.
+                  Станционная, 62/1, офис 416</a
+                >
               </li>
               <li class="text-white space3 font-medium mb-3">
                 <a
@@ -1650,14 +1660,14 @@
               </li>
               <li class="text-white space3 font-medium mb-3">
                 <a
-                  href="/reviews.html"
+                  href="/pages/reviews.html"
                   class="text-white hover:text-[#C83A36] transition-colors"
                   >Отзывы</a
                 >
               </li>
               <li class="text-white space3 font-medium">
                 <a
-                  href="/contacts.html"
+                  href="/pages/contacts.html"
                   class="text-white hover:text-[#C83A36] transition-colors"
                   >Контакты</a
                 >
@@ -1666,7 +1676,7 @@
           </div>
           <p class="text-[#ffffff99] space3 max-[1440px]:hidden">
             <a
-              href="/privacy.html"
+              href="/pages/privacy.html"
               class="text-[#ffffff99] hover:text-white transition-colors"
               >Политика конфиденциальности</a
             >
@@ -1675,7 +1685,7 @@
       </div>
       <div class="hidden max-[1024px]:block">
         <a
-          href="/contacts.html"
+          href="/pages/contacts.html"
           class="text-[#ffffff99] hover:text-white transition-colors"
         >
           <p
@@ -1688,8 +1698,12 @@
           <li
             class="text-white space3 font-medium mb-3 max-w-108 max-[1440px]:max-w-60"
           >
-          <a href="https://yandex.uz/maps/65/novosibirsk/house/stantsionnaya_ulitsa_62_1/bEsYfgVmTU0DQFtufXV4dnpnZQ==/?ll=82.826483%2C54.997641&z=16" class="text-white hover:text-[#C83A36] transition-colors">ООО АТЭК «Грузовые линии» 630071, Новосибирск, ул. Станционная,
-            62/1, офис 416</a>
+            <a
+              href="https://yandex.uz/maps/65/novosibirsk/house/stantsionnaya_ulitsa_62_1/bEsYfgVmTU0DQFtufXV4dnpnZQ==/?ll=82.826483%2C54.997641&z=16"
+              class="text-white hover:text-[#C83A36] transition-colors"
+              >ООО АТЭК «Грузовые линии» 630071, Новосибирск, ул. Станционная,
+              62/1, офис 416</a
+            >
           </li>
           <li class="text-white space3 font-medium mb-3">
             <a
@@ -1724,6 +1738,6 @@
       </div>
     </footer>
   </body>
-  <script src="main.js" type="module"></script>
+  <script src="/js/main.js" type="module"></script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
 </html>
