--- a/pages/pricelist.html
+++ b/pages/pricelist.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="./output.css" rel="stylesheet" />
-    <link href="./style.css" rel="stylesheet" />
-    <link href="./priceList.css" rel="stylesheet" />
+    <link href="../css/output.css" rel="stylesheet" />
+    <link href="../css/style.css" rel="stylesheet" />
+    <link href="../css/priceList.css" rel="stylesheet" />
+    <link rel="icon" href="../assets/favicon.svg" type="image/svg+xml" />
     <title>Price List</title>
   </head>
   <body>
@@ -17,7 +18,7 @@
       <div class="flex gap-6 items-center">
         <a href="/">
           <img
-            src="./assets/icons/logo.svg"
+            src="../assets/icons/logo.svg"
             alt="logo"
             class="mr-6 max-[768px]:w-25 max-[768px]:h-7"
           />
@@ -27,11 +28,11 @@
             <p class="text-white font-medium text-xl leading-[100%]">
               Грузоперевозки
             </p>
-            <img src="./assets/icons/chevron.svg" alt="chevron" />
+            <img src="../assets/icons/chevron.svg" alt="chevron" />
           </a>
           <a href="./road_transportation.html" class="flex items-center gap-1">
             <p class="header_title">Автоперевозки</p>
-            <img src="./assets/icons/chevron.svg" alt="chevron" />
+            <img src="../assets/icons/chevron.svg" alt="chevron" />
           </a>
           <p class="header_title">Расчет стоимости</p>
           <a href="./pricelist.html" class="header_title">Прайс-лист</a>
@@ -39,7 +40,7 @@
       </div>
       <div class="gap-2 flex">
         <div class="header_icon_wrap max-[768px]:hidden!">
-          <img src="./assets/icons/phone.svg" alt="phone" />
+          <img src="../assets/icons/phone.svg" alt="phone" />
         </div>
         <button
           class="bg-[#C83A36] h-12 w-41.5 rounded-xl text-white font-medium max-[768px]:hidden!"
@@ -50,7 +51,7 @@
           class="header_icon_wrap gap-2.5 w-30! hidden! max-[1440px]:flex! max-[768px]:h-10! max-[768px]:23! burger-menu"
           id="burgerBtn"
         >
-          <img src="./assets/icons/menu.svg" alt="menu" />
+          <img src="../assets/icons/menu.svg" alt="menu" />
           <p class="text-white font-medium">Меню</p>
         </div>
       </div>
@@ -59,13 +60,13 @@
           class="flex gap-6 items-center justify-between px-10 pb-6 max-[768px]:px-4 max-[768px]:pb-2 rounded-b-[25px] mb-36 border-b border-b-[#FFFFFF33]"
         >
           <img
-            src="./assets/icons/logo.svg"
+            src="../assets/icons/logo.svg"
             alt="logo"
             class="mr-6 max-[768px]:w-25 max-[768px]:h-7"
           />
           <div class="gap-2 flex">
             <div class="header_icon_wrap max-[768px]:hidden!">
-              <img src="./assets/icons/phone.svg" alt="phone" />
+              <img src="../assets/icons/phone.svg" alt="phone" />
             </div>
             <button
               class="bg-[#C83A36] h-12 w-41.5 rounded-xl text-white font-medium max-[768px]:hidden!"
@@ -76,7 +77,7 @@
               class="header_icon_wrap gap-2.5 w-30! max-[768px]:h-10! max-[768px]:23! burger-menu"
               id="closeMenuBtn"
             >
-              <img src="./assets/icons/close.svg" alt="menu" />
+              <img src="../assets/icons/close.svg" alt="menu" />
               <p class="text-white font-medium">Меню</p>
             </div>
           </div>
@@ -91,7 +92,7 @@
             >
               Грузоперевозки
             </p>
-            <img src="./assets/icons/chevron.svg" alt="chevron" class="mt-1" />
+            <img src="../assets/icons/chevron.svg" alt="chevron" class="mt-1" />
           </a>
           <a
             href="./road_transportation.html"
@@ -102,7 +103,7 @@
             >
               Автоперевозки
             </p>
-            <img src="./assets/icons/chevron.svg" alt="chevron" class="mt-1" />
+            <img src="../assets/icons/chevron.svg" alt="chevron" class="mt-1" />
           </a>
           <p
             class="text-white font-medium text-5xl leading-[100%] max-[768px]:text-[1.75rem] mb-8"
@@ -122,7 +123,7 @@
               Заказать звонок
             </button>
             <div class="header_icon_wrap w-10! h-10!">
-              <img src="./assets/icons/phone.svg" alt="phone" />
+              <img src="../assets/icons/phone.svg" alt="phone" />
             </div>
           </div>
         </div>
@@ -148,13 +149,13 @@
       >
         Начать сотрудничество
         <img
-          src="./assets/icons/chevron.svg"
+          src="../assets/icons/chevron.svg"
           alt="chevron"
           class="-rotate-90"
         />
       </button>
       <img
-        src="./assets/images/pricelistMain.png"
+        src="../assets/images/pricelistMain.png"
         alt="news"
         class="absolute right-0 max-[1440px]:w-120 max-[1440px]:h-90 -top-16 max-[1440px]:-top-9 max-[1024px]:w-110 max-[1024px]:h-80 max-[1440px]:-right-2 max-[1024px]:top-1.5 max-[1024px]:-right-7 max-[768px]:w-60 max-[768px]:h-50 max-[768px]:hidden max-[768px]:top-20"
       />
@@ -476,7 +477,7 @@
           >
             Оставить заявку
             <img
-              src="./assets/icons/chevron.svg"
+              src="../assets/icons/chevron.svg"
               alt="chevron"
               class="-rotate-90"
             />
@@ -499,7 +500,7 @@
               Какие типы транспорта вы используете для доставки?
             </p>
             <img
-              src="./assets/icons/arrowDown.svg"
+              src="../assets/icons/arrowDown.svg"
               alt="faq"
               class="accordion-icon"
             />
@@ -523,7 +524,7 @@
               Можно ли заказать доставку с частичной загрузкой (догрузом)?
             </p>
             <img
-              src="./assets/icons/arrowDown.svg"
+              src="../assets/icons/arrowDown.svg"
               alt="faq"
               class="accordion-icon"
             />
@@ -547,7 +548,7 @@
               Работаете ли вы с физическими лицами или только с бизнесом?
             </p>
             <img
-              src="./assets/icons/arrowDown.svg"
+              src="../assets/icons/arrowDown.svg"
               alt="faq"
               class="accordion-icon"
             />
@@ -571,7 +572,7 @@
               Как узнать стоимость доставки?
             </p>
             <img
-              src="./assets/icons/arrowDown.svg"
+              src="../assets/icons/arrowDown.svg"
               alt="faq"
               class="accordion-icon"
             />
@@ -595,7 +596,7 @@
               Как быстро вы сможете организовать выезд транспорта?
             </p>
             <img
-              src="./assets/icons/arrowDown.svg"
+              src="../assets/icons/arrowDown.svg"
               alt="faq"
               class="accordion-icon"
             />
@@ -619,7 +620,7 @@
               Какие документы нужны для оформления перевозки?
             </p>
             <img
-              src="./assets/icons/arrowDown.svg"
+              src="../assets/icons/arrowDown.svg"
               alt="faq"
               class="accordion-icon"
             />
@@ -640,24 +641,24 @@
         class="flex items-center justify-between mb-19.5 z-2000 max-[768px]:mb-8 relative max-[768px]:flex-col max-[768px]:gap-8 max-[768px]:items-start"
       >
         <a href="/">
-          <img src="./assets/icons/logo.svg" alt="logo" />
+          <img src="../assets/icons/logo.svg" alt="logo" />
         </a>
         <div class="flex gap-3">
           <a href="tel:+73832305676" class="footer_icon_wrap">
-            <img src="./assets/icons/phone.svg" alt="phone" />
+            <img src="../assets/icons/phone.svg" alt="phone" />
           </a>
           <a
             href="https://t.me/your_telegram"
             target="_blank"
             class="footer_icon_wrap"
           >
-            <img src="./assets/icons/telegram.svg" alt="text" />
+            <img src="../assets/icons/telegram.svg" alt="text" />
           </a>
           <div
             id="arrowUp"
             class="footer_icon_wrap bg-[#C83A36]! cursor-pointer"
           >
-            <img src="./assets/icons/arrowUpWhite.svg" alt="arrow" />
+            <img src="../assets/icons/arrowUpWhite.svg" alt="arrow" />
           </div>
         </div>
       </div>
@@ -943,5 +944,5 @@
       </div>
     </footer>
   </body>
-  <script src="main.js" type="module"></script>
+  <script src="../js/main.js" type="module"></script>
 </html>
