--- a/pages/road_transportation.html
+++ b/pages/road_transportation.html
@@ -377,7 +377,7 @@
               Используются тентованные, бортовые или изотермические машины в
               зависимости от типа груза. Возможна боковая и верхняя загрузка.
             </p>
-            <a href="/about.html">
+            <a href="./contacts.html">
               <button
                 class="text-white p-4.5 flex items-center max-[1440px]:p-4 max-[768px]:w-full justify-center gap-2 text-xl bg-[#C83A36] font-medium rounded-xl max-[1024px]:text-base!"
               >
