--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -509,7 +509,7 @@
               </li>
               <li class="text-white space3 font-medium mb-3">
                 <a
-                  href="/reviews.html"
+                  href="/comments.html"
                   class="text-white hover:text-[#C83A36] transition-colors"
                   >Отзывы</a
                 >
